--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">Animation</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="home">Home</string>
     <string name="args">Args</string>
-    <string name="title_another">another</string>
+    <string name="title_another">Another</string>
+    <string name="title_main">Main Activity</string>
+    <string name="main_activity">Main Activity</string>
+    <string name="animacion">Animacion</string>
 </resources>
